--- a/extensions/cli/package.json
+++ b/extensions/cli/package.json
@@ -84,6 +84,7 @@
     "@vitest/ui": "^3.2.4",
     "@workos-inc/node": "^7.45.0",
     "chalk": "^5.4.1",
+    "clipboardy": "^4.0.0",
     "commander": "^14.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "core": "file:../../core",
@@ -97,7 +98,6 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "execa": "^9.6.0",
-    "clipboardy": "^4.0.0",
     "express": "^5.1.0",
     "glob": "^11.0.3",
     "gpt-tokenizer": "^3.0.1",
@@ -115,6 +115,7 @@
     "node-fetch": "^3.3.2",
     "node-machine-id": "^1.1.12",
     "open": "^10.1.0",
+    "openai": "^5.13.1",
     "posthog-node": "^5.6.0",
     "prettier": "^3.6.2",
     "react": "^19.1.0",
