--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@continuedev/cli": "^1.4.36"
   }
 }
